fix: overflow-x fixed and some other minor changes

--- a/styles.css
+++ b/styles.css
@@ -62,10 +62,12 @@
 
 .searching{
     text-align: center;
+    font-size: 1.5rem;
 }
 
 .search-text{
     border-radius: 0.7rem;
+
 
 }
 
@@ -73,7 +75,7 @@
     position: relative;
     width: 100%;
     height: 350px;
-    background-image: url("https://cdn.feater.me/files/images/125138/fit/1280x720/file.jpg");
+    background-image: url("/assets/images/suscribe.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     
@@ -96,6 +98,7 @@
     font-weight: 600;
     padding: 7px 10px 7px 10px;
     transition: background-color .4s ease;
+    background-color: #CCFF00;
 }
 
 
@@ -135,14 +138,12 @@ li{
     font-weight: 600;
     padding: 7px 10px 7px 10px;
     transition: background-color .4s ease;
+    outline:none;
 }
 
-.btn:focus {
-    outline: none;
-}
 
-.btn:hover {
-    background-color: var(--tertiary)
+ .btn:hover, .btn:focus, .btn:active { 
+    background-color: var(--tertiary) !important
 }
 
 footer{
@@ -159,12 +160,28 @@ footer{
 
 .menu-options{
     width: 60%;
+    margin: 0;
     display: flex;
     justify-content:space-evenly;
+    align-items: center;
 }
 
 .options{
     text-decoration: none;
     color: #000;
+}
+
+.options a {
+        text-decoration: none;
+        color: #000;
+}
+
+
+.bottom-footer {
+    font-size: 0.8rem;
+    color:#fff;
+    background-color: var(--text);
+    
+    text-align: center;
 }
 
